fix: Address SonarCloud code smells
Remove unused imports and modernise Stream collection usage to resolve
code smell issues flagged by SonarCloud quality gate.